[project]
name = "adaptive-traffic"
version = "0.1.0"
description = "Multi-Agent Reinforcement Learning for Adaptive Traffic Signal Control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "traci>=1.19.0",
    "sumolib>=1.19.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.28.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "pynvml>=11.0.0",
    "sumo-rl>=1.4.5",
    "stable-baselines3[extra]>=2.0.0a9",
    "seaborn>=0.13.2",
    "ray[rllib]==2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/adaptive_traffic"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pyqt6>=6.9.1",
]
